0.1.1 2016-04-29

* various fixes concerning running inline code, generators and validators (both for perl and ruby)
* added code to support integration with Outthentic version 0.1.*

0.1.0 2016-04-21

* here documents as alternative for back slash delimiters for multiline strings
* limited support for various languages! Wow!


0.0.12 2016-04-03

Generators, validators, code blocks - print evaled code in human friendly manner for easy troubleshooting

0.0.11 2016-03-25

Outthentic::DSL::Context::Range::update_stream bugfix ( it was hard to find though ;-)

0.0.10 2016-03-18

some debug messages are shown at higher level of debug_mod variable

0.0.9 2016-02-15

Improved documentation again

0.0.8 2016-02-15

Improved documentation

0.0.7 2016-02-15

Added Name Outthentic::DSL section to pod to make pod doc  browserable in metacpan

0.0.6 2016-02-15

* ranges expressions !
* huge refactoring -  context modificators are moved into dedicated classes
* a big informal introduction started


0.0.5 2016-30-01

* TAP output - removes `\r` symbols from matching lines ( within: mode ) to fix broken TAP on linux environment 

0.0.4 2015-11-14

* update context: add some debug messages for debug level >=2
* block_mode bug fix

0.0.3 2015-11-08

* huge release
* new features:
    * within
    * validator
    * api clients
* a lot of refactoring
* a lot of documentation changes
* asserts now are not generated in place but returned by \`result' method

0.0.2 2015-10-29

* documentation created
* various small fixes

0.0.1 2015-10-28

* first cpan release
