@@ -1469,33 +1469,23 @@ Follow L<http://perldoc.perl.org/functions/eval.html|http://perldoc.perl.org/fun
 One may use other languages in code expressions. Use should use `here' document style ( see L<multiline expressions|#Multiline> section ) to insert your code and
 set shebang to define a language. Here are some examples:
 
-=over
 
-=item *
+=head2 bash 
 
-bash 
-
-code:  <<HERE
-!bash
-
-echo '# hello I am Outthentic'
-HERE
+    code:  <<HERE
+    !bash
+    
+    echo '# hello I am Outthentic'
+    HERE
 
 
+=head2 ruby
 
-=item *
-
-ruby
-
-code: <<CODE
-!ruby
-
-puts '# hello I am Outthentic'
-CODE
-
-
-
-=back
+    code: <<CODE
+    !ruby
+    
+    puts '# hello I am Outthentic'
+    CODE
 
 
 =head1 Asserts
@@ -2197,19 +2187,19 @@ Dsl code:
 
 Output:
 
-        # foo/bar start
-        # 1
-        # 2
-        # 3
-        # 100
-        # foo/bar end
+    # foo/bar start
+    # 1
+    # 2
+    # 3
+    # 100
+    # foo/bar end
     
-        # FOO/BAR start
-        # 100
-        # 10
-        # 20
-        # 30
-        # FOO/BAR end
+    # FOO/BAR start
+    # 100
+    # 10
+    # 20
+    # 30
+    # FOO/BAR end
 
 
 =head2 Restoring search context
@@ -2243,8 +2233,7 @@ Dsl code:
 
 =head2 Range expressions caveats
 
-
-=head3 Range expressions can't verify continuous lists.
+Range expressions can't verify continuous lists.
 
 That means range expression only verifies that there are I<some set> of lines inside some range.
 It is not necessary should be continuous.
