@@ -1,7 +1,8 @@
 0.1.1 2016-04-29
 
-* various fixes concerning running inline code, generators and validators (both for perl and ruby)
-* added code to support integration with Outthentic version 0.1.*
+* many (hopefully back compatible :) changes concerning integration with Outthentic of version 0.1.*
+* adding asserts expressions
+* documentation improved, cleared and expanded
 
 0.1.0 2016-04-21
 
